# ROIC-Builder

./: .gitignore  README.md  hello_world.py  pyproject.toml  requirements-dev.txt
configs/: run.example.yaml
docs/: ARCHITECTURE.md  RUN_CONFIG.md
src/roic_builder/: __init__.py  cli.py  config.py  interfaces.py  models.py  pipeline.py
src/roic_builder/adapters/data_providers/: capiq.py
src/roic_builder/adapters/llm/: insight_engine.py
src/roic_builder/adapters/presentation/: thinkcell_ppt.py
src/roic_builder/adapters/qualitative/: scrapers.py
src/roic_builder/services/: extraction.py  insight_synthesis.py  qualitative_memory.py  slide_builder.py
tests/: test_pipeline.py
